--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -3,9 +3,9 @@
     <a class="header-logo" href="{{ path('home') }}">
       <img src="{{ asset ('images/logo_forum.png')}}">
     </a>
-    <div class="header-search p-4 flex-grow-1">
-      <i class="fa-solid fa-search"></i>
-      <input type="text">
+    <div class="header-search d-flex align-items-center p-4 flex-grow-1">
+      <i class="fa-solid fa-search me-2"></i>
+      <input type="text" class="w-100">
     </div>
     <div>
       <button class="btn btn-primary me-2">Inscription</button>
