--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,8 @@ ul {
   list-style: none;
 }
 
+
+
 .header-search {
   border-radius: 8px;
   background-color: var(--gray-light);
@@ -60,4 +62,45 @@ ul {
 footer {
   background-color: var(--primary-dark);
   color: var(--color-primary);
+}
+.block {
+  padding:20px;
+  border-radius: var(--border-radius);
+  background-color: white;
+  box-shadow: var(--box-shadow);
+}
+
+.bg-gray{
+  background-color: var(--gray-light);
+}
+
+.form-row {
+  display: flex;
+  flex-flow: column;
+  margin-bottom: 15px;
+}
+
+.form-row label {
+  margin-bottom: 5px;
+  font-weight: var(--font-weight-semi-bold);
+  color: var(--color-dark);
+}
+
+.form-row input,
+textarea {
+  font-family: var(--font-family);
+  border: 0;
+  border-radius: var(--border-radius);
+  padding: 10px 15px;
+  background-color: var(--gray-light);
+}
+
+.form-row textarea {
+  min-height: 150px;
+}
+
+.form-errors {
+  color: var(--warning);
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight-semi-bold);
 }
