--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,9 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
+				<link rel="stylesheet" href="{{ asset ('css/style.css') }}">
+
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-		<link rel="stylesheet" href="{{ asset ('css/style.css') }}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,10 +17,11 @@
 	<body class="d-flex flex-column">
 		    {{ include('partials/_header.html.twig') }}
 
-		<div class="flex-grow-1 ">
+		<div class="flex-grow-1 bg-gray ">
 			<div class="container d-flex flex-row nowrap py-4">
 				<div class="col-3">{{ include('partials/_sidebar.html.twig') }}</div>
-				<div class="col-9 flex-grow-1"> {% block body %}{% endblock %}
+				<div class="col-9 flex-grow-1"> {% block body %}
+				{% endblock %}
 					</div>
 				</div>
 			</div>
