--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,82 @@
 {% block title %}Coding Tech!{% endblock %}
 
 {% block body %}
-<h1>Hello</h1>
+
+{% for question in questions %}
+	<div class="row d-flex justify-content-center mb-4">
+					<div class="col-md-12 col-lg-10 col-xl-8 ">
+						<div class="card">
+							<div class="card-body">
+								<div class="d-flex flex-start align-items-center mb-2">
+									<img class="rounded-circle shadow-1-strong me-3" src="{{question.author.avatar}}" alt="avatar" width="60" height="60"/>
+									<div>
+										<h6 class="fw-bold text-primary mb-1">{{ question.author.name }}</h6>
+										<p class="text-muted small mb-0">
+											Shared publicly - Jan 2020
+										</p>
+									</div>
+								</div>
+
+								<h4>{{question.title}}</h4>
+								<p class="mt-3 mb-4 pb-2">
+									{{question.content}}
+								</p>
+
+								<div class="small d-flex justify-content-start">
+									<div href="" class="d-flex justify-content-center align-items-center me-3 ">
+										<p class="mb-0 me-2 {{ question.rating > 0 ? 'text-success' : question.rating < 0 ? 'text-danger' : ''}}">{{question.rating}}</p>
+										<i class="far fa-thumbs-up me-2 {{ question.rating > 0 ? 'text-success' : '' }}"></i>
+										<i class="far fa-thumbs-down me-1 {{ question.rating < 0 ? 'text-danger' : '' }}"></i>
+										
+									</div>
+									<div href="" class="d-flex align-items-center me-3 text-decoration-none">
+										<i class="far fa-comment-dots me-1"></i>
+										<p class="mb-0">{{question.nbrOfResponse}}</p>
+									</div>
+									<div href="" class="d-flex align-items-center me-3 text-decoration-none">
+										<i class="fas fa-share me-1"></i>
+										<p class="mb-0">Share</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="card " style="padding-left: 4rem; border: none;">
+								<div class="card-body">
+									<div class="d-flex flex-start align-items-center">
+										<img class="rounded-circle shadow-1-strong me-3" src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="60" height="60"/>
+										<div>
+											<h6 class="fw-bold text-primary mb-1">Lily Coleman</h6>
+											<p class="text-muted small mb-0">
+												Shared publicly - Jan 2020
+											</p>
+										</div>
+									</div>
+
+									<p class="mt-3 mb-4 pb-2">
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+										              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										              quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.
+									</p>
+								</div>
+							</div>
+
+
+							<div class="card-footer py-3 border-0 mt-4" style="background-color: #f8f9fa;">
+								<div class="d-flex flex-start w-100">
+									<img class="rounded-circle shadow-1-strong me-3" src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(19).webp" alt="avatar" width="40" height="40"/>
+									<div class="form-outline w-100">
+										<textarea class="form-control" id="textAreaExample" rows="4" style="background: #fff;"></textarea>
+										<label class="form-label" for="textAreaExample">Message</label>
+									</div>
+								</div>
+								<div class="float-end mt-2 pt-1">
+									<button type="button" class="btn btn-primary btn-sm">Post comment</button>
+									<button type="button" class="btn btn-outline-primary btn-sm">Cancel</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+{% endfor %}
+				
 {% endblock %}
