--- a/templates/partials/_sidebar.html.twig
+++ b/templates/partials/_sidebar.html.twig
@@ -1,21 +1,13 @@
-<div class=" me-4">
-<h4>Leave a comment</h4>
 
 
-<form>
-
-	<div class="form-group">
-		<label for="name">Name</label>
-		<input type="text" name="name" id="fullname" class="form-control">
-	</div>
-	<div class="form-group">
-		<label for="message">Message</label>
-		<textarea name="msg" id="" msg cols="30" rows="5" class="form-control"></textarea>
-	</div>
+<div class="">
+<h3>Poser une question</h3>
 
 
-	<div class="form-group">
-		<button type="button" id="post" class="btn">Post Comment</button>
-	</div>
-</form>
+ {{ form_start(form) }}
+  <div class="block shadow-sm mb-4">
+  {{ form_rest(form) }}
+  </div>
+  <button class="btn btn-primary">Demander une réponse</button>
+  {{ form_end(form) }}
 </div>
